CardTableBarrierSetAssembler::gen_write_ref_array_post_barrier() does not check for zero length on AARCH64

XMLWordPrintable

    • b14
    • aarch64
    • linux

        If an arraycopy of length zero is performed on AArch64, one byte is dirtied regardless in the card table. The card being dirtied could in the worst case be out of bounds with the committed memory for the card table, and cause a crash.

              Assignee:
              Dmitrij Pochepko
              Reporter:
              Erik Ă–sterlund
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: